// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle default size checked renders correctly 1`] = `
.c1.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
}

.c0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

<label
  className="c0"
>
  <button
    aria-checked={true}
    aria-label="Переключатель"
    className="rovna-ui-switch css-dev-only-do-not-override-u64svk rovna-ui-switch-checked"
    data-testid="rovna-ui-toggle"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="switch"
    style={{}}
    type="button"
  >
    <div
      className="rovna-ui-switch-handle"
    />
    <span
      className="rovna-ui-switch-inner"
    >
      <span
        className="rovna-ui-switch-inner-checked"
      />
      <span
        className="rovna-ui-switch-inner-unchecked"
      />
    </span>
  </button>
  <span
    className="rovna-ui-typography c1 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
    data-testid="rovna-ui-text"
    style={
      {
        "WebkitLineClamp": undefined,
      }
    }
  />
</label>
`;

exports[`Toggle default size disabled renders correctly 1`] = `
.c1.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
}

.c0 {
  cursor: not-allowed;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

<label
  className="c0"
>
  <button
    aria-checked={false}
    aria-label="Переключатель"
    className="rovna-ui-switch css-dev-only-do-not-override-u64svk rovna-ui-switch-disabled"
    data-testid="rovna-ui-toggle"
    disabled={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="switch"
    style={{}}
    type="button"
  >
    <div
      className="rovna-ui-switch-handle"
    />
    <span
      className="rovna-ui-switch-inner"
    >
      <span
        className="rovna-ui-switch-inner-checked"
      />
      <span
        className="rovna-ui-switch-inner-unchecked"
      />
    </span>
  </button>
  <span
    className="rovna-ui-typography rovna-ui-typography-disabled c1 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
    data-testid="rovna-ui-text"
    style={
      {
        "WebkitLineClamp": undefined,
      }
    }
  />
</label>
`;

exports[`Toggle default size horizontal group renders correctly 1`] = `
.c2.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
}

.c1 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 24px;
}

<div
  className="c0 rovna-ui-toggle-group"
>
  <label
    className="c1"
  >
    <button
      aria-checked={false}
      aria-label="Toggle 1"
      className="rovna-ui-switch css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-toggle"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="switch"
      style={{}}
      type="button"
    >
      <div
        className="rovna-ui-switch-handle"
      />
      <span
        className="rovna-ui-switch-inner"
      >
        <span
          className="rovna-ui-switch-inner-checked"
        />
        <span
          className="rovna-ui-switch-inner-unchecked"
        />
      </span>
    </button>
    <span
      className="rovna-ui-typography c2 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-text"
      style={
        {
          "WebkitLineClamp": undefined,
        }
      }
    >
      Toggle 1
    </span>
  </label>
  <label
    className="c1"
  >
    <button
      aria-checked={false}
      aria-label="Toggle 2"
      className="rovna-ui-switch css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-toggle"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="switch"
      style={{}}
      type="button"
    >
      <div
        className="rovna-ui-switch-handle"
      />
      <span
        className="rovna-ui-switch-inner"
      >
        <span
          className="rovna-ui-switch-inner-checked"
        />
        <span
          className="rovna-ui-switch-inner-unchecked"
        />
      </span>
    </button>
    <span
      className="rovna-ui-typography c2 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-text"
      style={
        {
          "WebkitLineClamp": undefined,
        }
      }
    >
      Toggle 2
    </span>
  </label>
  <label
    className="c1"
  >
    <button
      aria-checked={false}
      aria-label="Toggle 3"
      className="rovna-ui-switch css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-toggle"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="switch"
      style={{}}
      type="button"
    >
      <div
        className="rovna-ui-switch-handle"
      />
      <span
        className="rovna-ui-switch-inner"
      >
        <span
          className="rovna-ui-switch-inner-checked"
        />
        <span
          className="rovna-ui-switch-inner-unchecked"
        />
      </span>
    </button>
    <span
      className="rovna-ui-typography c2 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-text"
      style={
        {
          "WebkitLineClamp": undefined,
        }
      }
    >
      Toggle 3
    </span>
  </label>
</div>
`;

exports[`Toggle default size renders correctly 1`] = `
.c1.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
}

.c0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

<label
  className="c0"
>
  <button
    aria-checked={false}
    aria-label="Переключатель"
    className="rovna-ui-switch css-dev-only-do-not-override-u64svk"
    data-testid="rovna-ui-toggle"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="switch"
    style={{}}
    type="button"
  >
    <div
      className="rovna-ui-switch-handle"
    />
    <span
      className="rovna-ui-switch-inner"
    >
      <span
        className="rovna-ui-switch-inner-checked"
      />
      <span
        className="rovna-ui-switch-inner-unchecked"
      />
    </span>
  </button>
  <span
    className="rovna-ui-typography c1 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
    data-testid="rovna-ui-text"
    style={
      {
        "WebkitLineClamp": undefined,
      }
    }
  />
</label>
`;

exports[`Toggle default size vertical group renders correctly 1`] = `
.c2.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
}

.c1 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
}

<div
  className="c0 rovna-ui-toggle-group"
>
  <label
    className="c1"
  >
    <button
      aria-checked={false}
      aria-label="Toggle 1"
      className="rovna-ui-switch css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-toggle"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="switch"
      style={{}}
      type="button"
    >
      <div
        className="rovna-ui-switch-handle"
      />
      <span
        className="rovna-ui-switch-inner"
      >
        <span
          className="rovna-ui-switch-inner-checked"
        />
        <span
          className="rovna-ui-switch-inner-unchecked"
        />
      </span>
    </button>
    <span
      className="rovna-ui-typography c2 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-text"
      style={
        {
          "WebkitLineClamp": undefined,
        }
      }
    >
      Toggle 1
    </span>
  </label>
  <label
    className="c1"
  >
    <button
      aria-checked={false}
      aria-label="Toggle 2"
      className="rovna-ui-switch css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-toggle"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="switch"
      style={{}}
      type="button"
    >
      <div
        className="rovna-ui-switch-handle"
      />
      <span
        className="rovna-ui-switch-inner"
      >
        <span
          className="rovna-ui-switch-inner-checked"
        />
        <span
          className="rovna-ui-switch-inner-unchecked"
        />
      </span>
    </button>
    <span
      className="rovna-ui-typography c2 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-text"
      style={
        {
          "WebkitLineClamp": undefined,
        }
      }
    >
      Toggle 2
    </span>
  </label>
  <label
    className="c1"
  >
    <button
      aria-checked={false}
      aria-label="Toggle 3"
      className="rovna-ui-switch css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-toggle"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="switch"
      style={{}}
      type="button"
    >
      <div
        className="rovna-ui-switch-handle"
      />
      <span
        className="rovna-ui-switch-inner"
      >
        <span
          className="rovna-ui-switch-inner-checked"
        />
        <span
          className="rovna-ui-switch-inner-unchecked"
        />
      </span>
    </button>
    <span
      className="rovna-ui-typography c2 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-text"
      style={
        {
          "WebkitLineClamp": undefined,
        }
      }
    >
      Toggle 3
    </span>
  </label>
</div>
`;

exports[`Toggle default size with label renders correctly 1`] = `
.c1.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
}

.c0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

<label
  className="c0"
>
  <button
    aria-checked={false}
    aria-label="Dark theme"
    className="rovna-ui-switch css-dev-only-do-not-override-u64svk"
    data-testid="rovna-ui-toggle"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="switch"
    style={{}}
    type="button"
  >
    <div
      className="rovna-ui-switch-handle"
    />
    <span
      className="rovna-ui-switch-inner"
    >
      <span
        className="rovna-ui-switch-inner-checked"
      />
      <span
        className="rovna-ui-switch-inner-unchecked"
      />
    </span>
  </button>
  <span
    className="rovna-ui-typography c1 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
    data-testid="rovna-ui-text"
    style={
      {
        "WebkitLineClamp": undefined,
      }
    }
  >
    Dark theme
  </span>
</label>
`;

exports[`Toggle small size checked renders correctly 1`] = `
.c1.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
}

.c0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

<label
  className="c0"
>
  <button
    aria-checked={true}
    aria-label="Переключатель"
    className="rovna-ui-switch rovna-ui-switch-small css-dev-only-do-not-override-u64svk rovna-ui-switch-checked"
    data-testid="rovna-ui-toggle"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="switch"
    style={{}}
    type="button"
  >
    <div
      className="rovna-ui-switch-handle"
    />
    <span
      className="rovna-ui-switch-inner"
    >
      <span
        className="rovna-ui-switch-inner-checked"
      />
      <span
        className="rovna-ui-switch-inner-unchecked"
      />
    </span>
  </button>
  <span
    className="rovna-ui-typography c1 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
    data-testid="rovna-ui-text"
    style={
      {
        "WebkitLineClamp": undefined,
      }
    }
  />
</label>
`;

exports[`Toggle small size disabled renders correctly 1`] = `
.c1.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
}

.c0 {
  cursor: not-allowed;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

<label
  className="c0"
>
  <button
    aria-checked={false}
    aria-label="Переключатель"
    className="rovna-ui-switch rovna-ui-switch-small css-dev-only-do-not-override-u64svk rovna-ui-switch-disabled"
    data-testid="rovna-ui-toggle"
    disabled={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="switch"
    style={{}}
    type="button"
  >
    <div
      className="rovna-ui-switch-handle"
    />
    <span
      className="rovna-ui-switch-inner"
    >
      <span
        className="rovna-ui-switch-inner-checked"
      />
      <span
        className="rovna-ui-switch-inner-unchecked"
      />
    </span>
  </button>
  <span
    className="rovna-ui-typography rovna-ui-typography-disabled c1 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
    data-testid="rovna-ui-text"
    style={
      {
        "WebkitLineClamp": undefined,
      }
    }
  />
</label>
`;

exports[`Toggle small size horizontal group renders correctly 1`] = `
.c2.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
}

.c1 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 24px;
}

<div
  className="c0 rovna-ui-toggle-group"
>
  <label
    className="c1"
  >
    <button
      aria-checked={false}
      aria-label="Toggle 1"
      className="rovna-ui-switch rovna-ui-switch-small css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-toggle"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="switch"
      style={{}}
      type="button"
    >
      <div
        className="rovna-ui-switch-handle"
      />
      <span
        className="rovna-ui-switch-inner"
      >
        <span
          className="rovna-ui-switch-inner-checked"
        />
        <span
          className="rovna-ui-switch-inner-unchecked"
        />
      </span>
    </button>
    <span
      className="rovna-ui-typography c2 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-text"
      style={
        {
          "WebkitLineClamp": undefined,
        }
      }
    >
      Toggle 1
    </span>
  </label>
  <label
    className="c1"
  >
    <button
      aria-checked={false}
      aria-label="Toggle 2"
      className="rovna-ui-switch rovna-ui-switch-small css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-toggle"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="switch"
      style={{}}
      type="button"
    >
      <div
        className="rovna-ui-switch-handle"
      />
      <span
        className="rovna-ui-switch-inner"
      >
        <span
          className="rovna-ui-switch-inner-checked"
        />
        <span
          className="rovna-ui-switch-inner-unchecked"
        />
      </span>
    </button>
    <span
      className="rovna-ui-typography c2 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-text"
      style={
        {
          "WebkitLineClamp": undefined,
        }
      }
    >
      Toggle 2
    </span>
  </label>
  <label
    className="c1"
  >
    <button
      aria-checked={false}
      aria-label="Toggle 3"
      className="rovna-ui-switch rovna-ui-switch-small css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-toggle"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="switch"
      style={{}}
      type="button"
    >
      <div
        className="rovna-ui-switch-handle"
      />
      <span
        className="rovna-ui-switch-inner"
      >
        <span
          className="rovna-ui-switch-inner-checked"
        />
        <span
          className="rovna-ui-switch-inner-unchecked"
        />
      </span>
    </button>
    <span
      className="rovna-ui-typography c2 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-text"
      style={
        {
          "WebkitLineClamp": undefined,
        }
      }
    >
      Toggle 3
    </span>
  </label>
</div>
`;

exports[`Toggle small size renders correctly 1`] = `
.c1.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
}

.c0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

<label
  className="c0"
>
  <button
    aria-checked={false}
    aria-label="Переключатель"
    className="rovna-ui-switch rovna-ui-switch-small css-dev-only-do-not-override-u64svk"
    data-testid="rovna-ui-toggle"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="switch"
    style={{}}
    type="button"
  >
    <div
      className="rovna-ui-switch-handle"
    />
    <span
      className="rovna-ui-switch-inner"
    >
      <span
        className="rovna-ui-switch-inner-checked"
      />
      <span
        className="rovna-ui-switch-inner-unchecked"
      />
    </span>
  </button>
  <span
    className="rovna-ui-typography c1 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
    data-testid="rovna-ui-text"
    style={
      {
        "WebkitLineClamp": undefined,
      }
    }
  />
</label>
`;

exports[`Toggle small size vertical group renders correctly 1`] = `
.c2.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
}

.c1 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
}

<div
  className="c0 rovna-ui-toggle-group"
>
  <label
    className="c1"
  >
    <button
      aria-checked={false}
      aria-label="Toggle 1"
      className="rovna-ui-switch rovna-ui-switch-small css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-toggle"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="switch"
      style={{}}
      type="button"
    >
      <div
        className="rovna-ui-switch-handle"
      />
      <span
        className="rovna-ui-switch-inner"
      >
        <span
          className="rovna-ui-switch-inner-checked"
        />
        <span
          className="rovna-ui-switch-inner-unchecked"
        />
      </span>
    </button>
    <span
      className="rovna-ui-typography c2 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-text"
      style={
        {
          "WebkitLineClamp": undefined,
        }
      }
    >
      Toggle 1
    </span>
  </label>
  <label
    className="c1"
  >
    <button
      aria-checked={false}
      aria-label="Toggle 2"
      className="rovna-ui-switch rovna-ui-switch-small css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-toggle"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="switch"
      style={{}}
      type="button"
    >
      <div
        className="rovna-ui-switch-handle"
      />
      <span
        className="rovna-ui-switch-inner"
      >
        <span
          className="rovna-ui-switch-inner-checked"
        />
        <span
          className="rovna-ui-switch-inner-unchecked"
        />
      </span>
    </button>
    <span
      className="rovna-ui-typography c2 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-text"
      style={
        {
          "WebkitLineClamp": undefined,
        }
      }
    >
      Toggle 2
    </span>
  </label>
  <label
    className="c1"
  >
    <button
      aria-checked={false}
      aria-label="Toggle 3"
      className="rovna-ui-switch rovna-ui-switch-small css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-toggle"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="switch"
      style={{}}
      type="button"
    >
      <div
        className="rovna-ui-switch-handle"
      />
      <span
        className="rovna-ui-switch-inner"
      >
        <span
          className="rovna-ui-switch-inner-checked"
        />
        <span
          className="rovna-ui-switch-inner-unchecked"
        />
      </span>
    </button>
    <span
      className="rovna-ui-typography c2 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-text"
      style={
        {
          "WebkitLineClamp": undefined,
        }
      }
    >
      Toggle 3
    </span>
  </label>
</div>
`;

exports[`Toggle small size with label renders correctly 1`] = `
.c1.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
}

.c0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

<label
  className="c0"
>
  <button
    aria-checked={false}
    aria-label="Dark theme"
    className="rovna-ui-switch rovna-ui-switch-small css-dev-only-do-not-override-u64svk"
    data-testid="rovna-ui-toggle"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="switch"
    style={{}}
    type="button"
  >
    <div
      className="rovna-ui-switch-handle"
    />
    <span
      className="rovna-ui-switch-inner"
    >
      <span
        className="rovna-ui-switch-inner-checked"
      />
      <span
        className="rovna-ui-switch-inner-unchecked"
      />
    </span>
  </button>
  <span
    className="rovna-ui-typography c1 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
    data-testid="rovna-ui-text"
    style={
      {
        "WebkitLineClamp": undefined,
      }
    }
  >
    Dark theme
  </span>
</label>
`;
